# GM-Companion

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .qmllint.ini  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Designaspekte.txt  GM-Companion.pro  Ideen.txt  Jenkinsfile  Milestones  README.md  Zeitplan  Zeitplan.txt  Zeitplan_Changelog.txt  _config.yml  appveyor.yml  characterpage.cpp  characters.cpp  chareditor.h  dbmanager.cpp  dbmanager.h  dicemanager.h  dicetool.h  dicetool.ui  filemanager.cpp  filemanager.h  functions.cpp  functions.h  items.db  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  network.cpp  notes.cpp  (+20 more)
app/: CMakeLists.txt  gm-companion.rc  logger.cpp  logger.h  main.cpp  tools.h  version.h.in
app/i18n/: gm-companion_de_DE.ts  gm-companion_en_US.ts
app/messages/: message.h  messagedispatcher.cpp  messagedispatcher.h  messagemanager.cpp  messagemanager.h
app/resources/: resources.qrc
app/resources/translations/: gm-companion_de_DE.qm  gm-companion_de_DE.ts  gm-companion_en_US.ts
app/ui/: CMakeLists.txt  Colors.qml  Main.qml  Sizes.qml  colors.js  defines.js  main.qml  qml.qrc  qtquickcontrols2.conf  sizes.js
app/ui/CustomComponents/: CCColors.qml  CCSizes.qml  CMakeLists.txt  CustomButton.qml  CustomCheckBox.qml  CustomColorButton.qml  CustomComboBox.qml  CustomMenuItem.qml  CustomRadioButton.qml  CustomScrollBar.qml  CustomScrollLabel.qml  CustomTextEdit.qml  CustomTextField.qml  CustomToolBar.qml  CustomToolBar.qml.bak  CustomToolBarButton.qml  CustomToolBarComboBox.qml  components.qrc  qmldir  sizes.js
app/ui/FileDialog/: CMakeLists.txt  filedialogbackend.cpp  filedialogbackend.h  fileobject.h
app/ui/Style/: ApplicationWindow.qml  Button.qml  CMakeLists.txt  CheckBox.qml  CheckDelegate.qml  CheckIndicator.qml  ComboBox.qml  Control.qml  Dialog.qml  DialogButtonBox.qml  Frame.qml  ItemDelegate.qml  Label.qml  Menu.qml  MenuItem.qml  MenuSeparator.qml  Page.qml  PageIndicator.qml  Pane.qml  Popup.qml  ProgressBar.qml  RadioButton.qml  RadioIndicator.qml  ScrollBar.qml  ScrollIndicator.qml  ScrollView.qml  (+9 more)
src/: CMakeLists.txt  functions.cpp  functions.h  gm-companion.rc  logging.cpp  logging.h  main.cpp  platformdetails.h  src.pro  version.h
src/addons/: addon.cpp  addon.h  addonmanager.cpp  addonmanager.h  addonreleaseinfo.h  addonrepository.h  addonrepositorymanager.cpp  addonrepositorymanager.h
src/cloud/: foldertree.cpp  foldertree.h  googledrive.cpp  googledrive.h
src/common/: CMakeLists.txt  abstracttool.cpp  abstracttool.h  logging.cpp  logging.h  platformdetails.cpp  qmlsingletonfactory.h
src/filesystem/: CMakeLists.txt  file.cpp  file.h  fileaccess.cpp  fileaccess.h  fileaccessgoogledrive.cpp  fileaccessgoogledrive.h  fileaccesslocal.cpp  fileaccesslocal.h  fileaccessnextcloud.cpp  fileaccessnextcloud.h  fileaccessswitcher.h  filedialog.cpp  filedialog.h  filemanager.cpp  filemanager.h  filerequestcontainer.h  googledrivefile.cpp  googledrivefile.h  multigethelper.h  options.h
src/filesystem_new/: CMakeLists.txt  file.cpp  file.h  fileaccess.h  fileaccesslocal.cpp  fileaccessnextcloud.cpp  fileaccessnextcloud.h
src/managers/: addonmanager.cpp  addonmanager.h  filemanager.cpp  filemanager.h  updatemanager.cpp  updatemanager.h
src/messages/: message.h  messagedispatcher.cpp  messagedispatcher.h  messagemanager.cpp  messagemanager.h  messagemodel.h
src/models/: treeitem.cpp  treeitem.h
src/resources/: credits.html  libresources.qrc  release.ini  resources.qrc  styles.ini  units.json
src/services/: CMakeLists.txt  googledrive.cpp  googledrive.h  googledriveconnectorlocal.cpp  googledriveconnectorlocal.h  ispotifyconnector.h  options.h  restserviceconnector.h  restserviceconnectorlocal.cpp  restserviceconnectorlocal.h  service.cpp  service.h  services.h  servicestatus.h  spotify.cpp  spotify.h  spotifyconnector.h  spotifyconnectorlocal.cpp  spotifyconnectorlocal.h  spotifyconnectorserver.cpp  spotifyconnectorserver.h
src/settings/: settings.h  settingsmanager.cpp  settingsmanager.h  settingstool.cpp  settingstool.h
src/tools/: combattracker.h  convertertool.cpp  convertertool.h  dicetool.cpp  dicetool.h  maptool.cpp  maptool.h  notestool.cpp  notestool.h  toolmanager.cpp  toolmanager.h
src/ui/: colorscheme.cpp  colorscheme.h  main.qml  qml.qrc
src/utils/: fileutils.cpp  fileutils.h  markdownutils.cpp  markdownutils.h  networkutils.cpp  processinfo.cpp  processinfo.h  utils.cpp  utils.h
tests/: CMakeLists.txt  main.cpp  tests.pro  tests.qrc  tst_test.cpp
tests/addons/: CMakeLists.txt  testaddonmanager.cpp  testaddonreader.cpp
tests/common/: CMakeLists.txt  main.cpp  main_catch.cpp
tests/filesystem/: CMakeLists.txt  abstractaccesstest.cpp  abstractaccesstest.h  mocknextcloud.cpp  mocknextcloud.h  oputils.cpp  oputils.h  testfilecache.cpp  testfiledialog.cpp  testgoogledriveaccess.cpp  testlocalaccess.cpp  testnextcloudaccess.cpp
tests/managers/: CMakeLists.txt  testupdatemanager.cpp  tst_updatemanager.cpp
tests/messages/: testmessagemanager.cpp
tests/services/: CMakeLists.txt  main.cpp
tests/test_fileutils/: CMakeLists.txt  test_fileutils.pro  testfileutils.cpp  testfileutils.h
tests/test_networkutils/: CMakeLists.txt  test_networkutils.pro  testnetworkutils.cpp  testnetworkutils.h
tests/test_spotify/: test_spotify  test_spotify.pro  testspotify.cpp  testspotify.h
tests/test_spotifyutils/: CMakeLists.txt  test_spotifyutils.pro  testspotifyutils.cpp  testspotifyutils.h
tests/test_utils/: CMakeLists.txt  test_utils.pro  testutils.cpp  testutils.h
tests/testhelper/: CMakeLists.txt  abstractmocknetworkmanager.cpp  abstractmocknetworkmanager.h  abstracttest.cpp  abstracttest.h  mockfs.cpp  mockfs.h  mocknetworkreply.cpp  mocknetworkreply.h  staticabstracttest.cpp  staticabstracttest.h
tests/tools/: CMakeLists.txt  testaudioproject.cpp  testcombattracker.cpp  testnamegenerator.cpp
tests/utils/: CMakeLists.txt  testfileutils.cpp  testmarkdownutils.cpp  testnetworkutils.cpp  testprocessinfo.cpp  testspotifyutils.cpp  testutils.cpp
(+1961 files in other folders)
